--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,9 +4,18 @@
         <title>UX/UI Homework 20</title>
         <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    </head>
+<link href="style.css"   
+</head>
     <body>
 
+    <!--Introduction to Product-->
+      <div class="jumbotron text-center">
+        <h1 class="display-4">WIYF: What's in Your Fridge?</h1>
+        <p class="lead">An app that offers recipe options based on ingredients already in your fridge with the hopes of reducing food waste.</p>
+        <img src="/images/WIYF.png" alt="WIYF screenshots" style="width:300px;height:200px;"> 
+      </div>
+
+    <!-- Nav component --> 
         <ul class="nav flex-column">
             <li class="nav-item">
               <a class="nav-link active" href="#">Brainstorming</a>
@@ -27,6 +36,40 @@
                 <a class="nav-link" href="#">Conclusion</a>
               </li>
           </ul>
+          
+
+    <!-- Research and problem section-->
+          <div class="container">
+            <div class="row">
+              <div class="col"> 
+                <p>In this research project, a series of interview questions around meal prep at home,
+                grocery shopping habits, and cooking pain points was created. </p> <br> 
+                <p>User research was conducted and found that people cook at home several times a week and like to 
+                follow a recipe, however, those same users find that a lack of time and energy prevents them from making meals.</p>
+              </div>
+              <div class="col"> <img src="/images/User research.png" alt="sticky notes" style="width:400px;height:300px;"> </div>
+              <div class="w-100"></div>
+            </div>
+          </div>
+
+    <!-- Iteration sectoin-->
+     <div class="jumbotron text-center">
+            <h4 class="display-4"> Motivate home chefs by suggesting 
+              recipes to them that use the ingredients they already have in their kitchen. </h4>
+            <img src="/images/User Persona.png" alt="User Persona" style="width:350px;height:150px;"> 
+            <img src="/images/Wireframes.png" alt="Wireframes" style="width:400px;height:200px;">
+            <img src="/images/LoFi protoype.png" alt="1st prototype" style="width:150px;height:300px;">
+            <p class="lead">With information gathered through user research and collective brainstorming...</p>
+          </div>
+
+    <!--Final Protoype-->
+           <div class="jumbotron text-center">
+            <img src="/images/Final Prototype.png" alt="Final Prototype" style="width:500px;height:200px;"> 
+            <p class="lead">The final prototype was created based on information gathered during guerilla testing. 
+              The goal was to create an app that would offer recipes based on ingredients already in the user’s 
+              fridge. In turn, this would decrease food waste.</p>
+          </div>
+          
 
     </body>
     <!-- JavaScript Bundle with Popper -->
